agg texto al main

--- a/index.html
+++ b/index.html
@@ -35,26 +35,26 @@
     <main>
         <section>
 
-
-
-        </section>
-
-        <section>
-
-
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe numquam corporis ad beatae atque itaque omnis ducimus rem libero, dolor optio voluptatem ipsam. Praesentium et inventore, aliquid, ab ex corporis nam, sunt beatae autem tempora tempore eius minus cum non provident ipsum. Perspiciatis eos quasi placeat, eligendi repudiandae velit ea.</p>
 
         </section>
 
         <section>
 
+           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem fuga optio labore aperiam cupiditate fugit. Quos cumque rem corporis maiores, earum corrupti ab omnis consequatur quasi, sit at nisi atque. Iure maxime aspernatur asperiores maiores recusandae. Odit in voluptatum id architecto eligendi aliquam repudiandae molestiae, provident illo, hic deleniti repellendus.</p>
 
+        </section>
+
+        <section>
+
+           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem in illum atque aspernatur quos aliquam harum? Totam cupiditate numquam iste id quidem magnam. Reprehenderit commodi veniam modi, eligendi tempora veritatis?</p>
 
         </section>
 
 
         <section>
 
-
+           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime eligendi molestias saepe dignissimos, laborum atque totam perferendis quas ab in recusandae veritatis quos nam deleniti consectetur minima. Nemo, voluptate enim.</p>
 
         </section>
 
